--- a/apphere/Base.lproj/Main.storyboard
+++ b/apphere/Base.lproj/Main.storyboard
@@ -476,6 +476,7 @@ VISITING</string>
                                             <outlet property="nameLabel" destination="Cyu-Tu-CXS" id="YuF-gP-hjo"/>
                                             <outlet property="photoView" destination="1aF-x4-tG4" id="T6v-he-v0o"/>
                                             <outlet property="promotionLabel" destination="bN4-Og-biA" id="RK6-py-pdV"/>
+                                            <outlet property="starRatingView" destination="cFK-Gl-7bR" id="w6p-6m-3ML"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -800,6 +801,7 @@ VISITING</string>
                         <outlet property="promotionDescriptionLabel" destination="Mle-9d-5YM" id="3Qr-9v-Ifu"/>
                         <outlet property="promotionNameLabel" destination="DeM-69-JUw" id="dwp-Ra-Vhc"/>
                         <outlet property="promotionPhotoView" destination="1ol-7p-TsN" id="KHj-cg-5Xn"/>
+                        <outlet property="starRatingView" destination="zJr-2i-veG" id="pgT-C2-KrV"/>
                         <outlet property="totalCustomerCountLabel" destination="A0e-6M-5Jg" id="9i6-9k-1RT"/>
                         <outlet property="urlButton" destination="9jb-Mb-db7" id="X5a-H8-W9a"/>
                         <outlet property="webCamView" destination="wGt-D4-JKc" id="txN-7V-9kO"/>
