--- a/apphere/Base.lproj/Main.storyboard
+++ b/apphere/Base.lproj/Main.storyboard
@@ -245,6 +245,9 @@ VISITING</string>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZcU-z6-9dQ" userLabel="Star Rating" customClass="CosmosView" customModule="Cosmos">
                                                 <rect key="frame" x="0.0" y="40.333333333333314" width="280" height="52"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="52" id="6N7-g1-BK4"/>
+                                                </constraints>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="rating">
                                                         <real key="value" value="0.0"/>
@@ -369,7 +372,7 @@ VISITING</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gO0-pU-Moj" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <panGestureRecognizer minimumNumberOfTouches="1" id="IjY-tw-Ked"/>
             </objects>
-            <point key="canvasLocation" x="-1079.2" y="504.67980295566502"/>
+            <point key="canvasLocation" x="-890" y="576"/>
         </scene>
         <!--Business List View Controller-->
         <scene sceneID="FYs-ts-ggw">
@@ -438,6 +441,10 @@ VISITING</string>
                                                 <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cFK-Gl-7bR" userLabel="Star Rating" customClass="CosmosView" customModule="Cosmos">
                                                     <rect key="frame" x="20" y="302" width="130" height="22"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="22" id="5Ja-Jo-kXV"/>
+                                                        <constraint firstAttribute="width" constant="130" id="HAi-b6-tvO"/>
+                                                    </constraints>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="rating">
                                                             <real key="value" value="0.0"/>
