--- a/apphere/Base.lproj/Main.storyboard
+++ b/apphere/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                         <color key="selectedImageTintColor" red="0.53476089240000002" green="0.33745265009999997" blue="0.93111383910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="La9-D8-5uU" kind="relationship" relationship="viewControllers" id="z9j-ff-vQD"/>
+                        <segue destination="wMF-B6-dDG" kind="relationship" relationship="viewControllers" id="z9j-ff-vQD"/>
                         <segue destination="4Wi-Pg-A2U" kind="relationship" relationship="viewControllers" id="BpN-cY-Qf9"/>
                         <segue destination="XPJ-dO-egJ" kind="relationship" relationship="viewControllers" id="mAf-bj-qkN"/>
                         <segue destination="QwD-OS-4c5" kind="relationship" relationship="viewControllers" id="q5f-iR-6XW"/>
@@ -371,7 +371,7 @@ VISITING</string>
             </objects>
             <point key="canvasLocation" x="-890" y="576"/>
         </scene>
-        <!--Business List View Controller-->
+        <!--Apphere-->
         <scene sceneID="FYs-ts-ggw">
             <objects>
                 <viewController hidesBottomBarWhenPushed="YES" id="La9-D8-5uU" customClass="BusinessListViewController" customModule="apphere" customModuleProvider="target" sceneMemberID="viewController">
@@ -380,7 +380,7 @@ VISITING</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="p0n-iP-3Ch">
-                                <rect key="frame" x="0.0" y="44" width="375" height="768"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="724"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="30" minimumInteritemSpacing="10" sectionInsetReference="safeArea" id="ov9-Oj-hqU">
                                     <size key="itemSize" width="300" height="344"/>
@@ -507,6 +507,7 @@ VISITING</string>
                                         <size key="customSize" width="100" height="90"/>
                                         <connections>
                                             <outlet property="titleLabel" destination="gD4-7b-0K6" id="Vz5-st-Yzs"/>
+                                            <segue destination="La9-D8-5uU" kind="show" identifier="category" id="bb4-yP-hRf"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -546,8 +547,7 @@ VISITING</string>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="mIv-CP-qjD"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="favorites" id="UBn-9G-Zs9"/>
-                    <nil key="simulatedTopBarMetrics"/>
+                    <navigationItem key="navigationItem" title="Apphere" id="kCc-uF-BYU"/>
                     <connections>
                         <outlet property="collectionView" destination="p0n-iP-3Ch" id="VWw-kY-toO"/>
                         <outlet property="searchDisplayController" destination="7cj-nR-N7d" id="vxn-CM-drq"/>
@@ -564,7 +564,7 @@ VISITING</string>
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="182" y="-1632"/>
+            <point key="canvasLocation" x="1054" y="-2392"/>
         </scene>
         <!--Business Detail View Controller-->
         <scene sceneID="Eu3-25-2j8">
@@ -840,7 +840,7 @@ VISITING</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="41Y-yJ-6g4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1196" y="-1632.2660098522167"/>
+            <point key="canvasLocation" x="2130" y="-1581"/>
         </scene>
         <!--Info View Controller-->
         <scene sceneID="wJV-bq-4ie">
@@ -861,6 +861,25 @@ VISITING</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2hz-9V-2PC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="181.59999999999999" y="-276.35467980295567"/>
+        </scene>
+        <!--Business List Navigation Controller-->
+        <scene sceneID="D7M-Dj-wqU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wMF-B6-dDG" userLabel="Business List Navigation Controller" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="UBn-9G-Zs9"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fv8-wW-4cE">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="La9-D8-5uU" kind="relationship" relationship="rootViewController" id="VtM-lC-905"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vne-iY-8pQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="181.59999999999999" y="-1632.2660098522167"/>
         </scene>
     </scenes>
     <resources>
